CELIX-376: Fixes an error for wronly printing about dandling references, not sure when it was introduced